--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,8 +29,8 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
-	 <welcome-file-list>
+<!-- 	 <welcome-file-list>
         <welcome-file>person.jsp</welcome-file>
-    </welcome-file-list>
+    </welcome-file-list> -->
 
 </web-app>
