--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,19 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-aop</artifactId>
+    <version>4.0.3.RELEASE</version>
+</dependency>
+
+<!-- AspectJ Weaver (safe version for Spring 4.x) -->
+<dependency>
+    <groupId>org.aspectj</groupId>
+    <artifactId>aspectjweaver</artifactId>
+    <version>1.8.13</version> <!-- stable version compatible with Spring 4.x -->
+</dependency>
+		
 		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
